MODIFICACION DE INDEX.HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,44 @@
     <title>Document</title>
 </head>
 <body>
- 
+    <main>
+        <section class="section__jump">
+            <h1>Go beyond and create your space</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed idt.</p>
+            <a href="#">Contact us</a>
+        </section>
+        <section class="section__counter">
+            <div class="counter__item">
+                <span>256B+</span>
+                <small>Lorem ipsum dolor sit</small>
+            </div>
+            <div class="counter__item">
+                <span>986K+</span>
+                <small>Lorem ipsum dolor sit</small>
+            </div>
+        </section>
+        <section class="section__card">
+            <article class="card__item">
+                <img src="storage/img/star.svg">
+                <h5>Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
+            </article>
+            <article class="card__item">
+                <img src="storage/img/star.svg">
+                <h5>Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
+            </article>
+            <article class="card__item">
+                <img src="storage/img/star.svg">
+                <h5>Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
+            </article>
+            <article class="card__item">
+                <img src="storage/img/star.svg">
+                <h5>Title</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
