--- a/index.html
+++ b/index.html
@@ -3,47 +3,155 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main>
-        <section class="section__jump">
-            <h1>Go beyond and create your space</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed idt.</p>
-            <a href="#">Contact us</a>
-        </section>
-        <section class="section__counter">
-            <div class="counter__item">
-                <span>256B+</span>
-                <small>Lorem ipsum dolor sit</small>
-            </div>
-            <div class="counter__item">
-                <span>986K+</span>
-                <small>Lorem ipsum dolor sit</small>
-            </div>
-        </section>
-        <section class="section__card">
-            <article class="card__item">
-                <img src="storage/img/star.svg">
-                <h5>Title</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
-            </article>
-            <article class="card__item">
-                <img src="storage/img/star.svg">
-                <h5>Title</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
-            </article>
-            <article class="card__item">
-                <img src="storage/img/star.svg">
-                <h5>Title</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
-            </article>
-            <article class="card__item">
-                <img src="storage/img/star.svg">
-                <h5>Title</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cursus imperdiet sed id elementum.</p>
-            </article>
-        </section>
+    <header class="header">
+        <div class="header__information">
+            <p>Hello, Welcome 👋</p>
+            <span>Albert Stevano</span>
+        </div>
+        <div class="header__login">
+            <img src="storage/img/img5.png">
+        </div>
+    </header>
+    <nav class="nav">
+        <div class="nav__search">
+            <input type="text" placeholder="Search clothes. . .">
+            <span class="search__icon">
+                <img src="storage/img/magnifyingGlass.svg">
+            </span>
+        </div>
+        <div class="nav__filter">
+            <a href="#">
+                <img src="storage/img/filter.svg">
+            </a>
+        </div>
+    </nav>
+    <main class="main">
+        <nav class="main__nav">
+            <ul class="nav__ul">
+                <li>
+                    <a href="#" >
+                        <img src="storage/img/category.svg" >
+                        All Items
+                    </a>
+                </li>
+                <li>
+                    <a href="#" >
+                        <img src="storage/img/mask.svg" style="filter: invert(1);">
+                        Dresss
+                    </a>
+                </li>
+                <li>
+                    <a href="#" >
+                        <img src="storage/img/hat.svg" >
+                        Hat
+                    </a>
+                </li>
+                <li>
+                    <a href="#" >
+                        <img src="storage/img/watch.svg" >
+                        Watch
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <article class="main__article">
+            <section>
+                <div class="section__front_page">
+                    <a href="views/detail.html">
+                        <img src="storage/img/img3.png">
+                    </a>
+                    <img src="storage/img/heart.svg">
+                </div>
+                <h5>Modern light clothes</h5>
+                <small>Dress modern</small>
+                <div class="section__price">
+                    <span>$212.99</span>
+                    <div  class="price__score">
+                        <img src="storage/img/star.svg">
+                        <p>5.0</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="section__front_page">
+                    <a href="views/detail.html">
+                        <img src="storage/img/img1.png">
+                    </a>
+                    <img src="storage/img/heartWhite.svg">
+                </div>
+                <h5>Modern light clothes</h5>
+                <small>Dress modern</small>
+                <div class="section__price">
+                    <span>$212.99</span>
+                    <div  class="price__score">
+                        <img src="storage/img/star.svg">
+                        <p>5.0</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="section__front_page">
+                    <a href="views/detail.html">
+                        <img src="storage/img/img2.png">
+                    </a>
+                    <img src="storage/img/heart.svg">
+                </div>
+                <h5>Modern light clothes</h5>
+                <small>Dress modern</small>
+                <div class="section__price">
+                    <span>$212.99</span>
+                    <div  class="price__score">
+                        <img src="storage/img/star.svg">
+                        <p>5.0</p>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="section__front_page">
+                    <a href="views/detail.html">
+                        <img src="storage/img/img4.png">
+                    </a>
+                    <img src="storage/img/heart.svg">
+                </div>
+                <h5>Modern light clothes</h5>
+                <small>Dress modern</small>
+                <div class="section__price">
+                    <span>$212.99</span>
+                    <div  class="price__score">
+                        <img src="storage/img/star.svg">
+                        <p>5.0</p>
+                    </div>
+                </div>
+            </section>
+        </article>
     </main>
+    <footer class="footer">
+        <ul class="footer__ul">
+            <li>
+                <a href="#">
+                    <img src="storage/img/homeSelect.svg">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="storage/img/bag.svg">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="storage/img/heart.svg">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="storage/img/profile.svg">
+                </a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
