--- a/index.html
+++ b/index.html
@@ -132,22 +132,22 @@
     <footer class="footer">
         <ul class="footer__ul">
             <li>
-                <a href="index.html">
+                <a href="#">
                     <img src="storage/img/homeSelect.svg">
                 </a>
             </li>
             <li>
-                <a href="views/detail.html">
+                <a href="#">
                     <img src="storage/img/bag.svg">
                 </a>
             </li>
             <li>
-                <a href="views/checkout.html">
+                <a href="#">
                     <img src="storage/img/heart.svg">
                 </a>
             </li>
             <li>
-                <a href="index.html">
+                <a href="#">
                     <img src="storage/img/profile.svg">
                 </a>
             </li>
